Fix overlapping brand text and nav links by hiding text on tablet size

--- a/css/blog.css
+++ b/css/blog.css
@@ -825,6 +825,14 @@ strong.extra {
     }
 }
 
+/* hide brand text and search bar in nav to free some space */
+@media (min-width: 768px) and (max-width: 991px) {
+    .navbar-brand > span.pull-left,
+    li.search-container {
+        display: none;
+    }
+}
+
 div.search-container {
     margin-bottom: 15px;
 }
